--- a/frontend/index.html
+++ b/frontend/index.html
@@ -98,6 +98,7 @@
                                     class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary/50">
                                     <option value="linear_7_4">linear_7_4 - (7,4)线性分组码</option>
                                     <option value="linear_3_2">linear_3_2 - (3,2)线性分组码</option>
+                                    <option value="bch_15_7">bch_15_7 - (15,7) BCH码</option>
                                     <option value="conv_7_4_3">conv_7_4_3 - (7,4,3)卷积码</option>
                                     <option value="conv_2_1_2">conv_2_1_2 - (2,1,2)卷积码</option>
                                 </select>
